<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:background="@drawable/bg_blob"
        android:layout_width="match_parent"
        android:paddingTop="18dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="24dp"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:id="@+id/root"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/avatar"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="40dp"
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/profile_pict"
                android:layout_width="40dp"
                android:scaleType="fitCenter"
                android:layout_height="match_parent"
                android:src="#000000"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:gravity="left|center"
            android:id="@+id/name_tv"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Wangh Shii"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            />

        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="/@Wangh Shii"
            android:textSize="12sp"
            android:gravity="left|center"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@id/name_tv"
            app:layout_constraintBottom_toBottomOf="@id/name_tv"
            app:layout_constraintTop_toTopOf="@id/name_tv"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/height_tv"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Wangh Shii"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/gender_tv"
            />

        <TextView
            android:id="@+id/mass_tv"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Wangh Shii"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/height_tv"
            app:layout_constraintTop_toBottomOf="@id/height_tv"
            />

        <TextView
            android:id="@+id/birth_tv"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Wangh Shii"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/mass_tv"
            app:layout_constraintTop_toBottomOf="@id/mass_tv"
            />

        <TextView
            android:id="@+id/hair_tv"
            android:layout_marginLeft="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="/@Wangh Shii"
            android:textSize="12sp"
            android:minWidth="100dp"
            android:maxWidth="150dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/height_tv"
            app:layout_constraintTop_toTopOf="@id/height_tv"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/skin_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="/@Wangh Shii"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:minWidth="100dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/hair_tv"
            app:layout_constraintTop_toBottomOf="@id/hair_tv"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/eye_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="/@Wangh Shii"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:minWidth="100dp"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toLeftOf="@id/skin_tv"
            app:layout_constraintTop_toBottomOf="@id/skin_tv"
            android:layout_marginRight="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>