<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:paddingVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_gravity="center"
                android:background="#f3f3f3"
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search"/>
                <EditText
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:id="@+id/search_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Search User Here"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRv"
            android:elevation="5dp"
            android:background="@drawable/bg_user_list_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            android:minWidth="100dp"
            android:layout_marginBottom="12dp"
            app:layout_constrainedHeight="true"
            tools:listitem="@layout/list_item_people"
            tools:itemCount="5"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_search"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_loading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginBottom="12dp"
            app:layout_constraintLeft_toLeftOf="@id/listRv"
            app:layout_constraintRight_toRightOf="@id/listRv"
            app:layout_constraintBottom_toBottomOf="@id/listRv">

            <ImageView
                android:layout_margin="7dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_loading"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>